k8s_module/ingress/kong-igness/test/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foo-bar
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
